Create master page

--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -103,6 +103,7 @@
     <Content Include="About.aspx" />
     <Content Include="CenfotecSite\index.aspx" />
     <Content Include="Contact.aspx" />
+    <Content Include="Content\AdminLTE.min.css" />
     <Content Include="Content\animate.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -118,7 +119,9 @@
     <Content Include="Content\img\portfolio\4.jpg" />
     <Content Include="Content\img\portfolio\5.jpg" />
     <Content Include="Content\img\portfolio\6.jpg" />
+    <Content Include="Content\jquery-jvectormap-1.2.2.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\_all-skins.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -163,24 +166,50 @@
     <Content Include="Content\less\mixins.less" />
     <Content Include="Content\less\variables.less" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\app.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\bootstrap3-wysihtml5.all.min.js" />
     <Content Include="Scripts\cbpAnimatedHeader.js" />
     <Content Include="Scripts\classie.js" />
     <Content Include="Scripts\creative.js" />
+    <Content Include="Scripts\fastclick.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jQuery-2.1.4.min.js" />
+    <Content Include="Scripts\jquery-jvectormap-1.2.2.min.js" />
+    <Content Include="Scripts\jquery-jvectormap-world-mill-en.js" />
     <Content Include="Scripts\jquery.easing.min.js" />
     <Content Include="Scripts\jquery.fittext.js" />
     <Content Include="Scripts\jquery.js" />
+    <Content Include="Scripts\jquery.slimscroll.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\WebForms\app.min.js" />
+    <Content Include="Scripts\WebForms\bootstrap.js" />
+    <Content Include="Scripts\WebForms\bootstrap.min.js" />
+    <Content Include="Scripts\WebForms\bootstrap3-wysihtml5.all.min.js" />
+    <Content Include="Scripts\WebForms\cbpAnimatedHeader.js" />
+    <Content Include="Scripts\WebForms\classie.js" />
+    <Content Include="Scripts\WebForms\creative.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
+    <Content Include="Scripts\WebForms\fastclick.min.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
     <Content Include="Scripts\WebForms\GridView.js" />
+    <None Include="Scripts\WebForms\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\WebForms\jquery-1.10.2.js" />
+    <Content Include="Scripts\WebForms\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\WebForms\jQuery-2.1.4.min.js" />
+    <Content Include="Scripts\WebForms\jquery-jvectormap-1.2.2.min.js" />
+    <Content Include="Scripts\WebForms\jquery-jvectormap-world-mill-en.js" />
+    <Content Include="Scripts\WebForms\jquery.easing.min.js" />
+    <Content Include="Scripts\WebForms\jquery.fittext.js" />
+    <Content Include="Scripts\WebForms\jquery.js" />
+    <Content Include="Scripts\WebForms\jquery.slimscroll.min.js" />
     <Content Include="Scripts\WebForms\Menu.js" />
     <Content Include="Scripts\WebForms\MenuStandards.js" />
+    <Content Include="Scripts\WebForms\modernizr-2.6.2.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjax.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxApplicationServices.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxComponentModel.js" />
@@ -192,11 +221,15 @@
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxTimer.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxWebForms.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxWebServices.js" />
+    <Content Include="Scripts\WebForms\respond.js" />
+    <Content Include="Scripts\WebForms\respond.min.js" />
     <Content Include="Scripts\WebForms\SmartNav.js" />
     <Content Include="Scripts\WebForms\TreeView.js" />
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="Scripts\WebForms\wow.min.js" />
+    <None Include="Scripts\WebForms\_references.js" />
     <Content Include="Scripts\wow.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Default.aspx" />
@@ -209,6 +242,7 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Site.Mobile.Master" />
+    <Content Include="Scripts\WebForms\jquery-1.10.2.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
