List evaluations ready

--- a/PresentacionWebForms/Web.config
+++ b/PresentacionWebForms/Web.config
@@ -24,4 +24,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="endpoint" value="http://localhost:50813/api/" />
+  </appSettings>
 </configuration>
