--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -109,6 +109,7 @@
     <Content Include="About.aspx" />
     <Content Include="CenfotecSite\Evaluations\List.aspx" />
     <Content Include="CenfotecSite\index.aspx" />
+    <Content Include="CenfotecSite\Kpi\CrearKpiVentasTotalesUsuario.aspx" />
     <Content Include="CenfotecSite\Kpi\KpiVentas.aspx" />
     <Content Include="CenfotecSite\Questions\Form.aspx" />
     <Content Include="CenfotecSite\Kpi\kpiProductos.aspx" />
@@ -286,6 +287,13 @@
     </Compile>
     <Compile Include="CenfotecSite\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\CrearKpiVentasTotalesUsuario.aspx.cs">
+      <DependentUpon>CrearKpiVentasTotalesUsuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\CrearKpiVentasTotalesUsuario.aspx.designer.cs">
+      <DependentUpon>CrearKpiVentasTotalesUsuario.aspx</DependentUpon>
     </Compile>
     <Compile Include="CenfotecSite\Kpi\KpiVentas.aspx.cs">
       <DependentUpon>KpiVentas.aspx</DependentUpon>
