Login UI Ready (some logic still pending)

--- a/PresentacionWebForms/Web.config
+++ b/PresentacionWebForms/Web.config
@@ -7,6 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState mode ="InProc" cookieless="true" timeout="1"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -15,6 +16,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
