--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -100,12 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="CenfotecSite\Evaluations\List.aspx" />
     <Content Include="CenfotecSite\index.aspx" />
+    <Content Include="CenfotecSite\Login\login.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\AdminLTE.min.css" />
     <Content Include="Content\animate.min.css" />
@@ -170,6 +170,9 @@
     <Content Include="Content\less\mixins.less" />
     <Content Include="Content\less\variables.less" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Resources\logoU.png" />
+    <Content Include="Resources\OtroLogo.ico" />
+    <Content Include="Resources\OtroLogo.PNG" />
     <Content Include="Scripts\app.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -278,6 +281,13 @@
     <Compile Include="CenfotecSite\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CenfotecSite\Login\login.aspx.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Login\login.aspx.designer.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -285,6 +295,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -297,7 +308,11 @@
     </Compile>
     <Compile Include="Models\Answer.cs" />
     <Compile Include="Models\Evaluation.cs" />
+    <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\Question.cs" />
+    <Compile Include="Models\Rol.cs" />
+    <Compile Include="Models\Session.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
