--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -107,8 +107,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
-    <Content Include="CenfotecSite\Evaluations\create.aspx" />
-    <Content Include="CenfotecSite\Evaluations\List.aspx" />
+    <Content Include="CenfotecSite\Templates\create.aspx" />
+    <Content Include="CenfotecSite\Templates\List.aspx" />
     <Content Include="CenfotecSite\index.aspx" />
     <Content Include="CenfotecSite\Questions\Form.aspx" />
     <Content Include="CenfotecSite\Kpi\kpiProductos.aspx" />
@@ -276,18 +276,18 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="CenfotecSite\Evaluations\create.aspx.cs">
+    <Compile Include="CenfotecSite\Templates\create.aspx.cs">
       <DependentUpon>create.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="CenfotecSite\Evaluations\create.aspx.designer.cs">
+    <Compile Include="CenfotecSite\Templates\create.aspx.designer.cs">
       <DependentUpon>create.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CenfotecSite\Evaluations\List.aspx.cs">
+    <Compile Include="CenfotecSite\Templates\List.aspx.cs">
       <DependentUpon>List.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="CenfotecSite\Evaluations\List.aspx.designer.cs">
+    <Compile Include="CenfotecSite\Templates\List.aspx.designer.cs">
       <DependentUpon>List.aspx</DependentUpon>
     </Compile>
     <Compile Include="CenfotecSite\index.aspx.cs">
