--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -109,8 +109,11 @@
     <Content Include="About.aspx" />
     <Content Include="CenfotecSite\Evaluations\List.aspx" />
     <Content Include="CenfotecSite\index.aspx" />
+    <Content Include="CenfotecSite\Kpi\CrearKpiVentasMontoTotal.aspx" />
     <Content Include="CenfotecSite\Kpi\CrearKpiVentasTotalesUsuario.aspx" />
     <Content Include="CenfotecSite\Kpi\KpiVentas.aspx" />
+    <Content Include="CenfotecSite\Kpi\ListarKpiVentas.aspx" />
+    <Content Include="CenfotecSite\Kpi\ResultadosKpisVentasMontoTotal.aspx" />
     <Content Include="CenfotecSite\Questions\Form.aspx" />
     <Content Include="CenfotecSite\Kpi\kpiProductos.aspx" />
     <Content Include="CenfotecSite\Kpi\KpiProspectos.aspx" />
@@ -288,6 +291,13 @@
     <Compile Include="CenfotecSite\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CenfotecSite\Kpi\CrearKpiVentasMontoTotal.aspx.cs">
+      <DependentUpon>CrearKpiVentasMontoTotal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\CrearKpiVentasMontoTotal.aspx.designer.cs">
+      <DependentUpon>CrearKpiVentasMontoTotal.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CenfotecSite\Kpi\CrearKpiVentasTotalesUsuario.aspx.cs">
       <DependentUpon>CrearKpiVentasTotalesUsuario.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -301,6 +311,20 @@
     </Compile>
     <Compile Include="CenfotecSite\Kpi\KpiVentas.aspx.designer.cs">
       <DependentUpon>KpiVentas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\ListarKpiVentas.aspx.cs">
+      <DependentUpon>ListarKpiVentas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\ListarKpiVentas.aspx.designer.cs">
+      <DependentUpon>ListarKpiVentas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\ResultadosKpisVentasMontoTotal.aspx.cs">
+      <DependentUpon>ResultadosKpisVentasMontoTotal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Kpi\ResultadosKpisVentasMontoTotal.aspx.designer.cs">
+      <DependentUpon>ResultadosKpisVentasMontoTotal.aspx</DependentUpon>
     </Compile>
     <Compile Include="CenfotecSite\Questions\Form.aspx.cs">
       <DependentUpon>Form.aspx</DependentUpon>
@@ -347,9 +371,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Bitacora.cs" />
     <Compile Include="Models\Evaluation.cs" />
+    <Compile Include="Models\Kpi.cs" />
+    <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Question.cs" />
+    <Compile Include="Models\Rol.cs" />
+    <Compile Include="Models\Sales.cs" />
+    <Compile Include="Models\TipoKpi.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
