--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="CenfotecSite\Evaluations\create.aspx" />
     <Content Include="CenfotecSite\Templates\create.aspx" />
     <Content Include="CenfotecSite\Templates\List.aspx" />
     <Content Include="CenfotecSite\index.aspx" />
@@ -276,6 +277,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="CenfotecSite\Evaluations\create.aspx.cs">
+      <DependentUpon>create.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Evaluations\create.aspx.designer.cs">
+      <DependentUpon>create.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CenfotecSite\Templates\create.aspx.cs">
       <DependentUpon>create.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
