--- a/PresentacionWebForms/PresentacionWebForms.csproj
+++ b/PresentacionWebForms/PresentacionWebForms.csproj
@@ -103,7 +103,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
@@ -118,6 +117,7 @@
     <Content Include="CenfotecSite\Kpi\ListarKpiVentas.aspx" />
     <Content Include="CenfotecSite\Kpi\ResultadosKpisVentasMontoTotal.aspx" />
     <Content Include="CenfotecSite\Kpi\ResultadosKpiVentasTotales.aspx" />
+    <Content Include="CenfotecSite\Login\Login.aspx" />
     <Content Include="CenfotecSite\Questions\Form.aspx" />
     <Content Include="CenfotecSite\Kpi\kpiProductos.aspx" />
     <Content Include="CenfotecSite\Kpi\KpiProspectos.aspx" />
@@ -363,6 +363,13 @@
     <Compile Include="CenfotecSite\Kpi\ResultadosKpiVentasTotales.aspx.designer.cs">
       <DependentUpon>ResultadosKpiVentasTotales.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CenfotecSite\Login\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CenfotecSite\Login\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CenfotecSite\Questions\Form.aspx.cs">
       <DependentUpon>Form.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -398,6 +405,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -410,8 +418,10 @@
     </Compile>
     <Compile Include="Models\Evaluation.cs" />
     <Compile Include="Models\Kpi.cs" />
+    <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Question.cs" />
+    <Compile Include="Models\Rol.cs" />
     <Compile Include="Models\Template.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\TipoKpi.cs" />
