--- a/PresentacionWebForms/Web.config
+++ b/PresentacionWebForms/Web.config
@@ -7,6 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState mode ="InProc" cookieless="true" timeout="45"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
